# sub0-bangkok-challenges

./: .gitignore  Cargo.toml  README.md
artifacts/chain_specs/: polkadot.json
challenge-1/: .gitignore  README.md  blocks_log.txt  events.txt  pallets.txt
challenge-1/artifacts/chain_specs/: polkadot_asset_hub.json
challenge-1/output/: example.txt  log.text  logs.txt  pallets.txt
challenge-1/src/: main.rs
challenge-2/: README.md  package-lock.json  package.json  pnpm-lock.yaml
challenge-2/src/: App.tsx  IdentityDisplay.tsx  TransferForm.tsx  networks.ts  utils.ts
challenge-3/: Cargo.toml  README.md  network.toml
challenge-3/parachain-node/src/: service.rs
challenge-3/runtime/: Cargo.toml
challenge-3/runtime/src/: apis.rs  lib.rs
challenge-3/runtime/src/configs/: mod.rs
output/: pallets.txt
src/: main.rs
