[package]
name = "challenge-1"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = { version = "0.38.0", features = ["unstable-light-client"] }
tokio = { version = "1.40", default-features = false, features = [
 "rt-multi-thread",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
