[profile.release]
panic = "unwind"

[workspace.package]
authors = ["R0GUE <go@r0gue.io>"]
edition = "2021"
homepage = "https://r0gue.io"
license = "Unlicense"
repository = "https://github.com/r0gue-io/base-parachain"

[workspace]
members = ["parachain-node", "runtime"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.3", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
    "derive",
] }
color-print = "0.3.4"
docify = "0.2.8"
futures = "0.3.30"
hex-literal = "0.4.1"
jsonrpsee = { version = "0.23.2", features = ["server"] }
log = { version = "0.4.21", default-features = false }
scale-info = { version = "2.11.1", default-features = false, features = [
    "derive",
] }
serde = "1.0.197"
serde_json = "1.0.114"
smallvec = "1.11.2"

# Build
substrate-build-script-utils = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
substrate-wasm-builder = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}

# Local
parachain-template-runtime = { path = "./runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-benchmarking-cli = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false, package = "substrate-prometheus-endpoint" }
sc-basic-authorship = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-chain-spec = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-cli = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-client-api = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-offchain = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-consensus = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-executor = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-network = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-network-sync = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-rpc = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-service = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-sysinfo = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-telemetry = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-tracing = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-transaction-pool = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sc-transaction-pool-api = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-blockchain = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-inherents = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-keystore = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-timestamp = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
substrate-frame-rpc-system = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
polkadot-cli = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
polkadot-primitives = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
polkadot-runtime-common = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", package = "staging-xcm", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", package = "staging-xcm-builder", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", package = "staging-xcm-executor", default-features = false }

# Cumulus
cumulus-client-cli = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
cumulus-client-collator ={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
cumulus-client-consensus-aura = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
cumulus-client-consensus-common = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
cumulus-client-consensus-proposer = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
cumulus-client-service = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-pallet-parachain-system = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-primitives-parachain-inherent = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
cumulus-primitives-storage-weight-reclaim = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-relay-chain-interface = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407"}
pallet-collator-selection = {git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
parachain-info = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", package = "staging-parachain-info", default-features = false }
